--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,7 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+powerlink/dist/powerlink.exe filter=lfs diff=lfs merge=lfs -text
+powerlink/build/powerlink/powerlink.pkg filter=lfs diff=lfs merge=lfs -text
+powerlink/dist/powerlink_m.exe filter=lfs diff=lfs merge=lfs -text
+powerlink/build/powerlink_m/powerlink_m.pkg filter=lfs diff=lfs merge=lfs -text
+powerlink/dist/powerlink_m.zip filter=lfs diff=lfs merge=lfs -text
